# gfx-maths-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  publish.yaml
src/: color.rs  lib.rs  macros.rs  mat4.rs  quaternion.rs  vec2.rs  vec3.rs  vec4.rs
