[package]
name = "gfx-maths"
version = "0.2.7"
authors = [ "Robin Quint" ]
edition = "2018"
description = "Implementations for the most essential Graphics Math operations"
repository = "https://github.com/rob2309/gfx-maths-rs"
license = "MIT"
keywords = [
    "graphics", "maths", "glm", "quaternion", "vulkan"
]
categories = [
    "data-structures", "graphics", "game-development", "mathematics"
]

[package.metadata.docs.rs]
features = [ "swizzle" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = "0.3.0"
paste = { version="1.0.6", optional=true }
serde = { version="1.0.127", features=["derive"], optional=true }

[features]
default = []

mat-row-major = []

swizzle = [ "paste" ]
