[package]
name = "gfx-maths"
version = "0.2.9"
authors = [ "Robin Quint" ]
edition = "2021"
description = "Implementations for the most essential graphics math operations"
repository = "https://github.com/rob2309/gfx-maths-rs"
license = "MIT"
keywords = [
    "graphics", "maths", "glm", "quaternion", "vulkan"
]
categories = [
    "data-structures", "graphics", "game-development", "mathematics"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docs_rs" ]

[dependencies]
auto_ops = "0.3.0"
paste = { version="1.0.6", optional=true }
serde = { version="1.0.127", features=["derive"], optional=true }

[features]
default = []

mat-row-major = []

swizzle = [ "dep:paste" ]
serde = [ "dep:serde" ]
